swim_client/src/configuration/tests/resources/invalid/unnamed-record-top.recon
{
    @client {
        buffer_size: 2
    }
}